--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
         <!-- Bootstrap -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script type="module" src="/src/main.jsx"></script>
     </body>
 </html>
